<resources>
    <string name="app_name">QQ quiz</string>
    <string name="a1">A1</string>
    <string name="a2">A2</string>
    <string name="a3">A3</string>
    <string name="a4">A4</string>
    <string name="a">A</string>
    <string name="b1">B1</string>
    <string name="b2">B2</string>
    <string name="b3">B3</string>
    <string name="b4">B4</string>
    <string name="b">B</string>
    <string name="konacno">KONACNO</string>
    <string name="c">C</string>
    <string name="c1">C1</string>
    <string name="c2">C2</string>
    <string name="c3">C3</string>
    <string name="c4">C4</string>
    <string name="d">D</string>
    <string name="d1">D1</string>
    <string name="d2">D2</string>
    <string name="d3">D3</string>
    <string name="d4">D4</string>
    <string name="_1_10">1/10</string>
    <string name="question_will_come_here">Question will come here..</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3">Option 3</string>
    <string name="option_4">Option 4</string>
    <string name="next">Next</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_20">20</string>
    <string name="_18">18</string>
    <string name="_16">16</string>
    <string name="_14">14</string>
    <string name="_12">12</string>
    <string name="_10">10</string>
    <string name="_8">8</string>
    <string name="konacno_korak_po_korak">KONACNO</string>
    <string name="stop">Stop</string>
    <string name="done">Done</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divider">/</string>
    <string name="open_brackets">(</string>
    <string name="close_brackets">)</string>
    <string name="delete"><![CDATA[<]]></string>
    <string name="the_subject">The subject</string>
    <string name="login">Login</string>
    <string name="login_to_your_account_to_continue_from_where_you_stopped">Login to your account to continue from where you stopped</string>
    <string name="email_address">Email address</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_details_in_the_fields_below_to_create_your_account">Enter your details in the fields below to create your account</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="get_started">Get started</string>
    <string name="have_an_account">Have an account?</string>
    <string name="forgot_passwordd">Forgot password</string>
    <string name="please_provide_your_registered_email_address_to_receive_instructions_on_how_to_reset_your_password">Please provide your registered email address to receive instructions on how to reset your password</string>
    <string name="submit">Submit</string>
    <string name="back_to_login">Back to login</string>
    <string name="retype_password">Retype password</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_a_new_password_to_your_account">Enter a new password to your account.</string>
    <string name="new_password">New password</string>
    <string name="retype_new_password">Retype new password</string>
    <string name="play_as_guest">Play as guest</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="test_username">Test username</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="play">Play</string>
    <string name="next_game">Next game</string>
    <string name="finish">Finish</string>
    <string name="sudoku">Sudoku</string>
    <string name="slagalica">Slagalica</string>
    <string name="remaining_lives_left_3">Remaining lives left: 3</string>
    <string name="your_total_score_is">Your total score is:</string>
    <string name="you_have_successfully_completed_the_quiz">You have successfully completed the quiz!</string>
    <string name="back_to_home">Back to home</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="select">Select</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="change_password">Change password</string>
    <string name="change">Change</string>
    <string name="please_enter_your_verification_code">Please enter your verification code</string>
    <string name="change_language">Change language</string>
    <string name="save">Save</string>
    <string name="logout_confirmation">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialog_title_difficulty">Choose Difficulty</string>
    <string name="positive_button_text">OK</string>
    <string name="negative_button_text">Cancel</string>
    <string name="settings_confirmation">Are you sure?</string>
    <string name="settings_confirmation_message">Do you want to proceed with the language change?</string>
    <string name="sudoku_confirmation_message">Are you sure you want to leave the game?</string>
    <string name="login_title">Please wait</string>
    <string name="login_message">Trying to login..</string>
    <string name="login_username_required">Username is required</string>
    <string name="login_password_required">Password is required</string>
    <string name="signup_title">Please wait</string>
    <string name="signup_message">Trying to register.</string>
    <string name="signup_email_required">Email is required</string>
    <string name="signup_username_required">Username is required</string>
    <string name="signup_password_required">Password is required</string>
    <string name="signup_retype_required">Retype password is required</string>
    <string name="signup_passwords_dont_match">Passwords do not match</string>
    <string name="forgot_password_title">Please wait</string>
    <string name="forgot_password_message">Sending code..</string>
    <string name="forgot_password_verification_message_on_timeout">Time is up!</string>
    <string name="forgot_password_verification_message_no_attempts_left">No attempts left!</string>
    <string name="reset_password_required">New password is required</string>
    <string name="reset_retype_required">Retype new password is required</string>
    <string name="reset_passwords_dont_match">Passwords do not match</string>
    <string name="reset_password_message">Please wait while we change your password</string>
    <string name="sudoku_message_on_timeout">Time is up!</string>
    <string name="sudoku_message_out_of_lives">You are out of lives!</string>
    <string name="sudoku_message_congrats">Congrats on beating the game!</string>
    <string name="main_login">Login</string>
    <string name="asocijacije_message_time_up">Time is up!</string>
    <string name="asocijacije_message_on_finish">Game is finished.Please wait..</string>
    <string name="asocijacije_message_on_round_starting">Round %1$d is starting..</string>
    <string name="asocijacije_title_on_create">Please wait</string>
    <string name="asocijacije_message_on_create">Loading the game..</string>
    <string name="korakpokorak_message_time_up">Time is up!</string>
    <string name="korakpokorak_message_on_finish">Game is finished.Please wait..</string>
    <string name="korakpokorak_message_on_round_starting">Round %1$d is starting..</string>
    <string name="korakpokorak_title_on_create">Please wait</string>
    <string name="korakpokorak_message_on_create">Loading the game..</string>
    <string name="koznazna_message_time_up">Time is up!</string>
    <string name="koznazna_message_on_finish">Game is finished.Please wait..</string>
    <string name="koznazna_title_on_create">Please wait</string>
    <string name="koznazna_message_on_create">Loading the game..</string>
    <string name="spojnice_message_time_up">Time is up!</string>
    <string name="spojnice_message_on_finish">Game is finished.Please wait..</string>
    <string name="spojnice_message_on_round_starting">Round %1$d is starting..</string>
    <string name="spojnice_title_on_create">Please wait</string>
    <string name="spojnice_message_on_create">Loading the game..</string>
    <string name="mojbroj_message_time_up">Time is up!</string>
    <string name="mojbroj_message_on_finish">Game is finished.Please wait..</string>
    <string name="mojbroj_message_on_round_starting">Round %1$d is starting..</string>
    <string name="skocko_message_time_up">Time is up!</string>
    <string name="skocko_message_on_finish">Game is finished.Please wait..</string>
    <string name="skocko_message_on_round_starting">Round %1$d is starting..</string>
    <string name="results_message">Thanks for playing Slagalica!</string>
    <string name="koznazna_submit">Submit</string>
    <string name="timer_time">Total time</string>
    <string name="timer_score">Score</string>
    <string name="timer_seconds">seconds</string>
    <string name="timer_total_score">Your total score is</string>
    <string name="on_back_pressed_game_message">Are you sure you want to leave the game?</string>
    <string name="on_back_pressed_message">Are you sure you want to leave?</string>
    <string name="forgot_password_email_required">Email is required</string>
    <string name="verification_code_incorrect">Incorrect verification code.%1$d attempts remaining.</string>
    <string name="forgot_password_email_wrong">The email you entered is invalid.Please try again.</string>
    <string name="welcome_title">Welcome to Slagalica!</string>
    <string name="welcome_message"><![CDATA[Please swipe through this tutorial for more info about individual games.
]]></string>
    <string name="koznazna_title">Ko zna zna</string>
    <string name="koznazna_message"><![CDATA[Guess the correct answer out of the offered 4.\nCorrect answer is + 10 points.\nWrong answer is - 5 points.
]]></string>
    <string name="spojnice_title">Spojnice</string>
    <string name="spojnice_message"><![CDATA[Guess the right pairs for the specific topic.\nCorrect pairs are + 2 points.\nThere are two rounds of this game.
]]></string>
    <string name="asocijacije_title">Asocijacije</string>
    <string name="asocijacije_message"><![CDATA[Guess the final field based on the hidden hints.\nEvery guessed column is + 2 points.\n+ 1 point for every unopened hidden field.\nFinal field is worth 7 points.\nThere are two rounds of this game.
]]></string>
    <string name="skocko_title">Skocko</string>
    <string name="skocko_message"><![CDATA[Find the right combination of 4 signs.\nFirst and second try are worth + 20 points.\nThird and forth + 15 points.\nFifth and sixth + 10 points.\nThere are two rounds of this game.
]]></string>
    <string name="ranking_list">Slagalica ranking list</string>
    <string name="points">Points</string>
    <string name="position">Pos.</string>
    <string name="sudoku_ranking_list">Sudoku ranking list</string>
</resources>