<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.deksi.graduationquiz.home.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.deksi.graduationquiz.home.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.deksi.graduationquiz.home.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

    <dialog
        android:id="@+id/nav_logout"
        android:name="com.deksi.graduationquiz.home.fragments.LogoutConfirmationDialogFragment"
        android:label="" />

    <fragment
        android:id="@+id/nav_ranking_list"
        android:name="com.deksi.graduationquiz.home.fragments.SlagalicaRankingListFragment"
        android:label="@string/ranking_list"
        tools:layout="@layout/fragment_ranking_list" />

    <fragment
        android:id="@+id/nav_sudoku_ranking_list"
        android:name="com.deksi.graduationquiz.home.fragments.SudokuRankingListFragment"
        android:label="@string/sudoku_ranking_list"
        tools:layout="@layout/fragment_sudoku_ranking_list" />

</navigation>