<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:orderInCategory="1"
            android:title=""
            android:enabled="false"
            />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home"
            android:orderInCategory="2"/>
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_account_24"
            android:title="@string/profile"
            android:orderInCategory="3"/>

        <item
            android:id="@+id/nav_ranking_list"
            android:icon="@drawable/baseline_bar_chart_24"
            android:title="@string/ranking_list"
            android:orderInCategory="4"/>

        <item
            android:id="@+id/nav_sudoku_ranking_list"
            android:icon="@drawable/baseline_bar_chart_24"
            android:title="@string/sudoku_ranking_list"
            android:orderInCategory="5"/>

        <item
            android:orderInCategory="6"
            android:title=""
            android:enabled="false"
            />

        <item
            android:orderInCategory="7"
            android:title=""
            android:enabled="false"
            />

        <item
            android:orderInCategory="8"
            android:title=""
            android:enabled="false"
            />

        <item
            android:orderInCategory="9"
            android:title=""
            android:enabled="false"
            />

        <item
            android:orderInCategory="10"
            android:title=""
            android:enabled="false"
            />

        <item
            android:orderInCategory="11"
            android:title=""
            android:enabled="false"
            />

        <item
            android:orderInCategory="12"
            android:title=""
            android:enabled="false"
            />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"
            android:orderInCategory="13"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/log_out"
            android:orderInCategory="14"/>

    </group>
</menu>