<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background6"
    android:padding="16dp"
    tools:context=".slagalica.activities.KorakPoKorak">


    <LinearLayout
        android:layout_width="70dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="115dp"
        android:background="#EDEAEA"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_view_time_left"
            android:layout_width="38dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear_layout_hints_points"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_hint1"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_white"
                android:hint="@string/_1"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_hint2"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_white"
                android:hint="@string/_2"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_hint3"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_white"
                android:hint="@string/_3"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_hint4"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_white"
                android:hint="@string/_4"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_hint5"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_white"
                android:hint="@string/_5"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_hint6"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_white"
                android:hint="@string/_6"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_hint7"
                android:layout_width="290dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_white"
                android:hint="@string/_7"
                android:textAllCaps="false"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_points_20"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_pink"
                android:hint="@string/_20"
                android:textAllCaps="false"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_points_18"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_pink"
                android:hint="@string/_18"
                android:textAllCaps="false"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_points_16"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_pink"
                android:hint="@string/_16"
                android:textAllCaps="false"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_points_14"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_pink"
                android:hint="@string/_14"
                android:textAllCaps="false"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_points_12"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_pink"
                android:hint="@string/_12"
                android:textAllCaps="false"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_points_10"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_pink"
                android:hint="@string/_10"
                android:textAllCaps="false"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_points_8"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/round_pink"
                android:hint="@string/_8"
                android:textAllCaps="false"
                android:textColorHint="@color/textColor">

            </androidx.appcompat.widget.AppCompatButton>

        </LinearLayout>
    </LinearLayout>


    <EditText
        android:id="@+id/edit_text_konacno_korak_po_korak"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_pink"
        android:hint="@string/konacno_korak_po_korak"
        android:textAlignment="center"
        android:inputType="textCapWords"
        android:textColor="@color/textColor"
        android:textColorHint="@color/textColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_hints_points" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_submit_korakpokorak"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/round_white"
        android:text="@string/submit"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_konacno_korak_po_korak" />

</androidx.constraintlayout.widget.ConstraintLayout>