<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:padding="16dp"
    tools:context=".slagalica.activities.KoZnaZna">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/text_view_number_of_questions"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/round_white"
            android:elevation="1dp"
            android:gravity="center"
            android:hint="@string/_1_10"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/question_text_color" />


        <TextView
            android:id="@+id/text_view_time_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"/>

        <TextView
            android:id="@+id/text_view_question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@color/edit_text_asosijacije"
            android:gravity="center"
            android:minHeight="100dp"
            android:padding="20dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="@string/question_will_come_here" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_option1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/round_white"
            android:textAllCaps="false"
            android:textColor="@color/edit_text_asosijacije"
            tools:text="@string/option_1">

        </androidx.appcompat.widget.AppCompatButton>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_option2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_white"
            android:textAllCaps="false"
            android:textColor="@color/edit_text_asosijacije"
            tools:text="@string/option_2">

        </androidx.appcompat.widget.AppCompatButton>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_option3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_white"
            android:textAllCaps="false"
            android:textColor="@color/edit_text_asosijacije"
            tools:text="@string/option_3">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_option4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/round_white"
            android:textAllCaps="false"
            android:textColor="@color/edit_text_asosijacije"
            tools:text="@string/option_4">

        </androidx.appcompat.widget.AppCompatButton>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_next_question"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="88dp"
            android:background="@drawable/round_green"
            android:elevation="0dp"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="@color/white">

        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>