<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_color"
    android:layout_marginTop="6dp">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/position"
        android:textSize="16sp"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_gravity="center"
        android:textColor="@color/textColor"/>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/username"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="8dp"
        android:layout_gravity="center"
        android:textColor="@color/textColor"/>

    <View
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:text="@string/points"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="8dp"
        android:layout_gravity="center"
        android:textColor="@color/textColor"/>

</TableRow>